basic structure for html

--- a/client/app/game/game.scss
+++ b/client/app/game/game.scss
@@ -1,3 +1,21 @@
+.model {
+}
+
+.bacteria {
+}
+
+.bacterium {
+  display: inline-block;
+}
+
+.common {
+  background-color: yellow;
+}
+
+.current-bacteria {
+  background-color: rgba(60, 0, 60, 0.6) !important;
+}
+
 // #info-panel {
 //   position: absolute;
 //   top: 0px;
