more changes in frontend functions

--- a/client/app/game/game.scss
+++ b/client/app/game/game.scss
@@ -33,7 +33,7 @@
   background-color: yellow;
 }
 
-.current-bacteria {
+.selected-bacteria {
   background-color: rgba(60, 0, 60, 0.6) !important;
 }
 
